# pico_camera_slider

./: CMakeLists.txt  Kconfig  README.md  WIFI_CONFIG_README.md  prj.conf
boards/: rpi_pico_rp2040_w.overlay
src/: http_server.c  http_server.h  main.c  wifi_ap_provisioning.c  wifi_ap_provisioning.h  wifi_config_gui.c  wifi_config_gui.h  wifi_scanner.c  wifi_scanner.h  wifi_shell_commands.c  wifi_shell_commands.h
